# OpenCompute-Protocol

./: CONTRIBUTING.md  README.md  pyproject.toml
.cursor/代码/: 00-执行层Agent分工与监督.md  README.md  github-交付清单.md  opencompute_demo.py  run_demo.ps1  test_opencompute_demo.py
.cursor/架构/: 00-架构设计任务书与验收标准.md  01-架构方案-v1.md  02-决策层审计意见与修改指令.md  03-最终架构方案-v2-通过版.md
.cursor/策略/: 00-项目北极星与边界.md  01-决策层Agent集群章程.md  02-策略自我讨论与迭代.md  03-Agent集群MCP配置矩阵.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
app/: main.py  models.py  providers.py  services.py
demo/ocp_demo/: README.md  engine.py  main.py  visual_preview.py
demo/ocp_demo/tests/: test_engine.py
docs/: README.md  deployment.md  finance_fundraising_agent_v1.md  finance_model_template.csv  fundraising_data_room_checklist.csv  known_issues_and_tech_debt.md  runbook.md  troubleshooting.md
docs/en/: README.md
docs/en/architecture/iterations/: v1_proposal.md  v2_audit_approved.md
docs/en/decision/: north_star_and_boundaries.md  strategy_iteration_log.md
docs/governance/: agent_clusters_and_mcp.md  delivery_gates.md
docs/releases/: v0.1.0.md
docs/zh/: README.md
docs/zh/architecture/iterations/: v1_proposal.md  v2_audit_approved.md
docs/zh/decision/: north_star_and_boundaries.md  strategy_iteration_log.md
docs/zh/governance/: agent_clusters_and_mcp.md  delivery_gates.md
docs/zh/idea/: original_idea.md
scripts/: run_ocp_demo.ps1  run_ocp_visual_preview.ps1
tests/: test_api.py
